# tddata

./: .gitignore  LICENSE  PLOTS.md  Pipfile  README.md  make_plots.py  plot.py  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/workflows/: run-tests.yml  tests.yaml
src/tddata/: __init__.py  cli.py  constants.py  downloader.py  meta.py  plot.py  reader.py  storage.py
tddata/: __init__.py  bonds.json  bonds.py  cli.py  downloader.py  reader.py
tests/: test_cli.py  test_downloader.py  test_plot.py  test_reader.py  test_storage.py
