[project]
name = "tddata"
version = "0.2.0"
authors = [
  { name="Daniel Komesu", email="daniel@dkko.me" },
]
description = "Easly download & read brazilian Tesouro Direto's data"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx",
    "pandas",
    "seaborn",
    "tqdm",
]

[project.scripts]
tddata = "tddata.cli:main"

[project.urls]
Homepage = "https://github.com/dankkom/tddata"
Issues = "https://github.com/dankkom/tddata/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
